# drone-pathgen

./: .cursorignore  .cursorrules  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  drone_pathgen.cpp  gcopter_api.cpp  global_planning.cpp  main_with_viz.py  pyproject.toml  setup.py  spec.md  test.cpp  test_installation.py  test_python_api.py  voxel_output.txt
.notes/: directory_structure.md  project-overview.md
docs/: README.md  api_reference.md  examples.md  installation.md  user_guide.md
examples/: README.md  basic_pathgen.py  visualization.py
include/api/: gcopter_api.hpp
include/gcopter/: firi.hpp  flatness.hpp  gcopter.hpp  geo_utils.hpp  lbfgs.hpp  minco.hpp  quickhull.hpp  sdlp.hpp  sfc_gen.hpp  trajectory.hpp  voxel_dilater.hpp  voxel_map.hpp
include/misc/: visualizer.hpp
scripts/: build.sh
src/: drone_pathgen.cpp  example_usage.py  gcopter_api.cpp  pybindings.cpp  test.cpp  test_wrapper.py
visualization/: debug_path.py  visualize_open3d.py  visualize_voxels.py
